[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/widgets/play_button.gd" type="Script" id=1]
[ext_resource path="res://ui/play_controls/play_controls.gd" type="Script" id=2]

[node name="PlayControls" type="Control"]
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PC" type="PanelContainer" parent="."]
margin_left = 464.0
margin_right = 506.0
margin_bottom = 37.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBC" type="HBoxContainer" parent="PC"]
margin_left = 7.0
margin_top = 7.0
margin_right = 63.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 16

[node name="Play" type="Button" parent="PC/HBC"]
margin_right = 20.0
margin_bottom = 23.0
toggle_mode = true
text = ">"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
accent_color = Color( 1, 2, 1, 1 )
pressed_icon = "Stop"
unpressed_icon = "Play"

[node name="PlayTrack" type="Button" parent="PC/HBC"]
margin_left = 36.0
margin_right = 56.0
margin_bottom = 23.0
toggle_mode = true
text = ">"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
accent_color = Color( 1, 2, 1, 1 )
pressed_icon = "Stop"
unpressed_icon = "PlayTrack"

[connection signal="toggled" from="PC/HBC/Play" to="." method="_on_Play_toggled"]
[connection signal="toggled" from="PC/HBC/PlayTrack" to="." method="_on_PlayTrack_toggled"]
